--- a/simple-animation-with-transition/index.html
+++ b/simple-animation-with-transition/index.html
@@ -11,10 +11,19 @@
 </head>
 
 <body>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione fugiat corporis totam inventore molestiae voluptate accusantium, voluptas in dolor labore vitae sequi deleniti, molestias amet id quae animi, minima unde?
+    </p>
     <div class="container">
         <div class="btn">
             Animez moi !
         </div>
+
+        <div class="btn">
+            Animez moi !
+        </div>
+
+
         <div class="box">
             <div class="box__ball"></div>
         </div>
