--- a/transition-with-pseaudo-class/index.html
+++ b/transition-with-pseaudo-class/index.html
@@ -14,6 +14,17 @@
     <div class="container">
 
         <h1>Déclenchez vos transitions avec les pseudoclasses</h1>
+
+        <div class="form">
+            <div class="form__group">
+                <label for="">email</label>
+                <input type="email" name="" id="">
+            </div>
+
+            <div class="form__group">
+                <button class="btn">Valider</button>
+            </div>
+        </div>
     </div>
 </body>
 
