refactor stylesheet code by using partials

--- a/transition-with-pseaudo-class/index.html
+++ b/transition-with-pseaudo-class/index.html
@@ -22,7 +22,8 @@
             </div>
 
             <div class="form__group">
-                <button class="btn">Valider</button>
+                <button class="btn">C'est parti !! </button>
+                <div class="ball"></div>
             </div>
         </div>
     </div>
