animate many properties in the same translation

--- a/transition-with-pseaudo-class/index.html
+++ b/transition-with-pseaudo-class/index.html
@@ -26,6 +26,18 @@
                 <div class="ball"></div>
             </div>
         </div>
+
+        <hr>
+        <div class="card">
+            <h2>Animer plusieurs propriétés </h2>
+            <p>
+                <div class="btn2">OK</div>
+            </p>
+        </div>
+
+        <div class="rocket"></div>
+
+        <button class="btn-launch">Launch</button>
     </div>
 </body>
 
