perform animation with transform property

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <ul>
         <li><a href="simple-animation-with-transition/index.html">Créez des animations simples avec les transitions</a></li>
         <li><a href="transition-with-pseaudo-class/index.html">Déclenchez vos transitions avec les pseudoclasses</a></li>
+        <li><a href="creer-des-animations-avec-transform/index.html">Créez des animations fluides avec la propriété CSS transform</a></li>
     </ul>
 </body>
 
